--- a/css/navbar.css
+++ b/css/navbar.css
@@ -14,4 +14,31 @@
 nav{
     background: palevioletred;
     padding: 10px;
+    display: flex;
+    justify-content: space-around;
 }
+.nav-boton {
+    background: salmon;
+    color: #fff;
+    padding: 10px o;
+    border: 2px solid #fff;
+    display: none;
+
+}
+
+@media (max-width: 600px) {
+    /* .facet_sidebar {
+      display: none; */
+      nav{
+          background: black;
+          flex-direction:column;
+        }
+        .nav-enlace{
+            margin: 10px 0;
+        }
+        .nav-boton{
+            display: inline-block;
+        }
+    }
+  
+  
